[project]
name = "learning-orchestrator-mcp"
version = "1.0.0"
description = "A sovereign, dynamic skills development and spaced-repetition pedagogical engine using the Model Context Protocol."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "SEOSiri-Official", email = "info@seosiri.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Interface Engine"
]
dependencies = [
    "mcp>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/SEOSiri-Official/learning-orchestrator-mcp"
Repository = "https://github.com/SEOSiri-Official/learning-orchestrator-mcp.git"
Sponsorship = "https://github.com/sponsors/SEOSiri-Official"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
